build: adicionado hotreload e watch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   app:
-    build: .
+    build:
+      context: .
+      target: development
     container_name: products-app
     ports:
       - "8080:8080"
@@ -23,6 +25,18 @@ services:
       SPRING_DATASOURCE_USERNAME: products
       SPRING_DATASOURCE_PASSWORD: products
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_DOCKER_COMPOSE_ENABLED: false
+    volumes:
+      - ~/.m2:/root/.m2
+    develop:
+      watch:
+        - action: sync
+          path: ./src
+          target: /app/src
+          ignore:
+            - "**/*.class"
+        - action: rebuild
+          path: ./pom.xml
     restart: always
 
 volumes:
