build: atualizado dependencia maven e as configuraçoes do docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,14 @@
-target
-.git
-.gitignore
-node_modules
+# Build artifacts
+
+target/
+_.jar
+_.war
+\*.class
+
+# IDE
+
+.idea/
+.vscode/
+_.iml
+_.ipr
+\*.iws
