--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,30 @@
-# Logging de requisições HTTP
-logging.level.org.springframework.web=DEBUG
+# ========================================
+# DATABASE
+# ========================================
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/products}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:products}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:products}
+
+# ========================================
+# JPA / HIBERNATE
+# ========================================
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ========================================
+# SERVER
+# ========================================
+server.port=${SERVER_PORT:8080}
+
+# ========================================
+# SPRING BOOT
+# ========================================
+spring.docker.compose.enabled=${SPRING_DOCKER_COMPOSE_ENABLED:true}
+
+# ========================================
+# DEVTOOLS (Hot Reload)
+# ========================================
+spring.devtools.restart.enabled=${SPRING_DEVTOOLS_RESTART_ENABLED:true}
+spring.devtools.livereload.enabled=true
