--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,21 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
+			<!-- Formatação automática de código -->
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>2.41.1</version>
+				<configuration>
+					<java>
+						<googleJavaFormat>
+							<version>1.17.0</version>
+							<style>GOOGLE</style>
+						</googleJavaFormat>
+					</java>
+				</configuration>
+        	</plugin>
+
 			<!-- JaCoCo para cobertura de testes -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
